# PetFlow

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
assets/mascots/: README.md
assets/mascots/line_dog/: mascot.json
data/: graph.json  sample_graph.json  settings.json
data/mascots/anime_assistant/: mascot.json
data/petflow_schemas/: README.md
data/petflow_schemas/agent/: graph_generation_input.json  graph_generation_output.json  node_splitting_input.json  node_splitting_output.json  pet_speech_input.json  pet_speech_output.json  review_generation_input.json  review_generation_output.json
data/petflow_schemas/config/: settings.json
data/petflow_schemas/events/: event_schemas.json
data/petflow_schemas/storage/: graph.json  sample_graph.json
docs/: PetFlow 动态日历功能设计.md  architecture.md  development.md  petflow.md  roadmap.md  作业报告.tex  大作业要求.md
src/petflow/: __init__.py  config.py  main.py
src/petflow/agent/: __init__.py  agent_client.py  agent_executor.py  prompts.py  proposal.py  settings.py
src/petflow/app/: __init__.py  app_context.py  event_bus.py  graph_service.py  id_generator.py
src/petflow/domain/: __init__.py  (+7 more)
tests/: test_agenda_service.py  test_agent_settings.py  test_agent_workflow.py  test_clipboard_watcher.py  test_focus_monitor.py  test_fonts.py  test_graph_layout_service.py  test_graph_model.py  test_graph_service.py  test_mascot_service.py  test_pet_service.py  test_prompts.py  test_recommendation_engine.py  test_resource_service.py  test_review_service.py  test_routine_service.py  test_storage_service.py
(+33 files in other folders)
