[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petflow"
version = "0.1.0"
description = "PetFlow - a desktop pet workflow manager"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "requests>=2.31",
  "pillow>=10.0",
]

[project.optional-dependencies]
win32 = ["pywin32>=306; platform_system == 'Windows'"]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0",
]

[project.scripts]
petflow = "petflow.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
